--- a/styles/stylesheet.css
+++ b/styles/stylesheet.css
@@ -2,13 +2,9 @@
   box-sizing: border-box;
 }
 
-body {
-  margin: 0;
-}
-
 aside {
   float: right;
-  margin: 6rem 11rem 6rem 0;
+  margin: 6rem 10rem 6rem 1rem;
   width: 22%;
 }
 
@@ -21,7 +17,7 @@ footer {
   background-color: #444;
   color: white;
   text-align: center;
-  clear: right;
+  clear: both;
 }
 
 h3 {
@@ -31,10 +27,29 @@ h3 {
 body {
   font-family: Arial, Helvetica, sans-serif;
   color: #444;
+  margin: 0;
+}
+
+header {
+  background-color: #444;
+  color: white;
+  padding: 2rem;
+  text-align: center;
+  clear: both;
 }
 
 #sidebar-cat {
   margin-left: 0;
+}
+
+#tara {
+  width: 50%;
+  height: auto;
+}
+
+img {
+  max-width: 100%;
+  height: auto;
 }
 
 p {
@@ -46,6 +61,11 @@ figcaption {
 }
 
 a:link {
+  text-decoration: none;
+  color: skyblue;
+}
+
+a:visited {
   text-decoration: none;
   color: skyblue;
 }
