updated site for better a11y

--- a/styles/stylesheet.css
+++ b/styles/stylesheet.css
@@ -65,12 +65,12 @@ figcaption {
 
 a:link {
   text-decoration: none;
-  color: skyblue;
+  color: #1C7FA6;
 }
 
 a:visited {
   text-decoration: none;
-  color: skyblue;
+  color: #1C7FA6;
 }
 
 .footer-links {
